# BusinessStrategySimulator3

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TEMP_SWEEP_CHECKLIST.txt  business_strategy_gym_env.py  simulator.py
Analysis/: business_strategy_plots.py  extract_mean_reward_from_jsons.py
BusinessStrategySimulator3/JSONReader/: json.h
JSONReader/: json.h
WorkingFiles/: main.cpp  python_wrapper.cpp
WorkingFiles/Action/: Action.cpp  Action.h
WorkingFiles/Agent/: BaseAgent.cpp  BaseAgent.h  ControlAgent.cpp  ControlAgent.h  StableBaselines3Agent.cpp  StableBaselines3Agent.h
WorkingFiles/Config/: ConfigValidator.cpp  ConfigValidator.h  default.json  economy_only_random.json
WorkingFiles/DataCache/: DataCache.cpp  DataCache.h
WorkingFiles/Economy/: Economy.cpp  Economy.h
WorkingFiles/Firm/: Firm.cpp  Firm.h
WorkingFiles/History/: MasterHistory.cpp  MasterHistory.h  SimulationHistory.cpp  SimulationHistory.h
data/: LICENSE
docs/: cluster.md  hyperparameter_sweeps.md  run_agent_simulations.md
scripts/: batch_plot_generation.py  collect_a2c_sweep_results.py  collect_dqn_sweep_results.py  collect_ppo_sweep_results.py  collect_zip_console_metrics.py  extract_first_simulations.py  extract_master_output_ends.py  extract_topk_ai_simulations.py  generate_random_single_sim_heatmaps.py  generate_single_simulation_plots_for_zips.py  generate_zip_plot_folders.py  process_market_overlap_batch.py  run_agent_simulations.py  run_main_for_agent_zips.py  run_ppo_hyperparameter_sweep.py  submit_all_sweeps.py  submit_slurm_a2c_sweep.py  submit_slurm_batch_plot_generation.sh  submit_slurm_dqn_sweep.py  submit_slurm_ppo_sweep.py  submit_slurm_training_array.sh  submit_slurm_training_job.sh  summarize_ends_by_folder.py  train_ppo_default_economy_batch.py  train_ppo_for_config_batch.py  train_ppo_for_shareability.py
tests/: ControlAgentInvalidPolicyTests.cpp  FirmMarketLookupTest.cpp  MiscUtilsTests.cpp  exit_action_tests.cpp
(+51 files in other folders)
